# pico_i2c_slave-toniebox

./: CMakeLists.txt  README.md
i2c-emu-mma8452q/: CMakeLists.txt  i2c-emu-mma8452q.c  mma_box-clap-left.csv  mma_box-clap-right.csv  mma_box-headsdown.csv  mma_box-idle.csv  mma_box-tilt-left.csv  mma_box-tilt-right.csv  mma_box.ods
